<resources>
    <string name="app_name">Name-app</string>
    <string name="list_names">List all names</string>
    <string name="gallery">Open gallery</string>
    <string name="learning_mode">Open learning mode</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pluss">+</string>
    <string name="add_person">Add person</string>
    <string name="set_owner">Set owner</string>
    <string name="guess">Guess</string>
    <string name="guess_who">Who is this?</string>
    <string name="score">Score</string>
    <string name="select_image">Select image</string>
    <string name="capture_image">Capture image</string>
    <string name="person_name_hint">Enter name...</string>
    <string name="no_name">Name can\'t be empty!</string>
    <string name="no_img">Please select an image</string>
    <string name="correct">Correct!</string>
    <string name="no_owner">No owner set, please do!</string>

</resources>
