<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:context=".LearningModeActivity"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/score" />

            <TextView
                android:id="@+id/textView_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="363dp"
            android:contentDescription="Guess image"
            app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/editText_guess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/guess_who"
        android:inputType="textPersonName" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="guess"
        android:text="@string/guess" />
    </LinearLayout>